# Stock_Analysis_Agent_LangGraph

./: .env  1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_tool_call.ipynb  5_tool_call_agent.ipynb  6_memory.ipynb  7_langsmith.ipynb  8_HITL.py  9_agent_real_time_stock_price.ipynb  pyproject.toml
stock-agent-mcp/: pyproject.toml  server.py
stock-agent-mcp/src/langgraph_agent/: tools.py
